syntax = "proto3";

option csharp_namespace = "GrpcService";

package visitPlan;

service VisitPlans {
  rpc GetPaginatedData(stream GetVisitPlanWithPaginationQuery) returns (stream PaginatedData); 
}

message GetVisitPlanWithPaginationQuery {
  int32 page_number = 1;
  int32 page_size = 2;
}

message PaginatedData {
  repeated VisitPlanItem items = 1;
  int32 page_number = 2;
  int32 total_pages = 3;
  int32 total_count = 4;
  bool has_previous_page = 5;
  bool has_next_page = 6;
}

message VisitPlanItem {
  string nro_cliente = 1;
  string nombre_cliente = 2;
  string nombre_cliente2 = 3;
  string nombre_cliente3 = 4;
  string conc_busq = 5;
  string organizacao_vendas = 6;
  string canal_distribucion = 7;
  string sector = 8;
  string estatus_cliente = 9;
  string fecha_alta_sistema = 10;
  string creado_por = 11;
  string modalidad_ventas = 12;
  string id_plan_visita = 13;
  string inicio_vigencia_plan = 14;
  string fin_vigencia_plan = 15;
  string ruta = 16;
  string tipo_plan_visita = 17;
  string metodo_venta = 18;
  string inactivo_visita_plan = 19;
  string ritmo = 20;
  string fecha_inicio_contacto = 21;
  string fecha_final_contacto = 22;
  string visita_lunes = 23;
  string lun_de = 24;
  string lun_a = 25;
  string visita_martes = 26;
  string mar_de = 27;
  string mar_a = 28;
  string visita_miercoles = 29;
  string mie_de = 30;
  string mie_a = 31;
  string visita_jueves = 32;
  string jue_de = 33;
  string jue_a = 34;
  string visita_viernes = 35;
  string vie_de = 36;
  string vie_a = 37;
  string visita_sabado = 38;
  string sab_de = 39;
  string sab_a = 40;
  string visita_domingo = 41;
  string dom_de = 42;
  string dom_a = 43;
  string dia_de = 44;
  string mes_de = 45;
  string anio_de = 46;
  string dia_a = 47;
  string mes_a = 48;
  string visitas_prog = 49;
  string frecuencia_visita = 50;
  string split_pedidos_pe = 51;
  string prev_especializada = 52;
  string calle = 53;
  string continuacion_calle = 54;
  string colonia = 55;
  string no_externo = 56;
  string no_interno = 57;
  string entre_calle = 58;
  string y_calle = 59;
  string delegacion = 60;
  string cp = 61;
  string baja = 62;
  string calle_domfiscal = 63;
  string email = 64;
  string pais = 65;
  string poblacion_domfiscal = 66;
  string no_domfiscal = 67;
  string region = 68;
  string desc_region = 69;
  string region_domfiscal = 70;
  string colonia_domfiscal = 71;
  string clase_impuesto = 72;
  string nif_cuit_rfc = 73;
  string imp2 = 74;
  string tipo_cobro = 75;
  string tipo_nif = 76;
  string vias_pago = 77;
  string cuenta_asociada = 78;
  string grupo_imputacion = 79;
  string grupo_tesoreria = 80;
  string esquema_cliente = 81;
  string no_cte_ant = 82;
  string coord_x = 83;
  string coord_y = 84;
  string gpo_cuentas = 85;
  string localidad = 86;
  string persona_contacto = 87;
  string nombre_pers_conta = 88;
  string apellido_pers_con = 89;
  string telefono = 90;
  string tel_whatsapp = 91;
  string telefon_movil = 92;
  string fax = 93;
  string tel_ext = 94;
  string telefono_pers_contac = 95;
  string estado = 96;
  string descripcion_estado = 97;
  string revenue_map = 98;
  string region_kof = 99;
  string descripcion_region_kof = 100;
  string zona_ventas_uo = 101;
  string gerencia_ventas = 102;
  string jefatura_ventas = 103;
  string region_distribucion = 104;
  string centro_suministro = 105;
  string condicion_expedic = 106;
  string tipo_servicio = 107;
  string descripcion_tipo_ser = 108;
  string zona_transporte = 109;
  string id_multicentro_multiruta = 110;
  string prio_entrega = 111;
  string clase_doc_ventas = 112;
  string cond_pago = 113;
  string bloqueo_pedido = 114;
  string bloq_ped_vta_se = 115;
  string bloq_entrega_todas_areas = 116;
  string bloq_ent_vta_se = 117;
  string bloq_facturatodas_areas = 118;
  string bloq_fac_vta_se = 119;
  string bloq_soporte_ventas = 120;
  string tipo_detallista = 121;
  string descripcion_tipo_det = 122;
  string condicion = 123;
  string descripcion_condicio = 124;
  string cliente_icekof = 125;
  string cta_clave = 126;
  string cadena = 127;
  string contratode_preferen = 128;
  string unidad_negocio = 129;
  string sub_unidad_negocio = 130;
  string grupo_canal = 131;
  string desc_grupo_canal = 132;
  string canal = 133;
  string desc_canal = 134;
  string canal_kof = 135;
  string desc_canal_kof = 136;
  string gec = 137;
  string desc_gec = 138;
  string niv_socioeconomico = 139;
  string descripcion_nse = 140;
  string niv_soc_planchado = 141;
  string descripcipon_nsep = 142;
  string nivel_margen = 143;
  string seg_precios = 144;
  string desc_seg_prec = 145;
  string seg_descuentos = 146;
  string desc_seg_desc = 147;
  string seg_portafolio = 148;
  string desc_seg_port = 149;
  string seg_propuesta_valor = 150;
  string desc_seg_pdv = 151;
  string seg_pelicula_exito = 152;
  string desc_seg_pde = 153;
  string seg_exhibicion = 154;
  string desc_seg_exh = 155;
  string seg_comunicacion = 156;
  string desc_seg_com = 157;
  string ocasion_consumo = 158;
  string desc_ocasion_consumo = 159;
  string foco = 160;
  string desc_categoria_foco = 161;
  string ger_reg = 162;
  string limite_cred = 163;
  string cluster_analytics = 164;
  string desc_cluster_analytics = 165;
  string it = 166;
  string desc_it = 167;
  string nivel_colaboracion = 168;
  string imagen = 169;
  string delivery = 170;
  string enrejado = 171;
  string tamano = 172;
  string desc_tamano = 173;
  string localidad1 = 174;
  string fe_baja = 175;
  string ciudad2 = 176;
  string distrito = 177;
  string secuencia = 178;
  string numero_identificacion_fiscal = 179;
  string id_loc = 180;
  string datos_adicionales = 181;
  string domicil_fiscal = 182;
  string mcdonalds = 183;
  string material_unico = 184;
  string in_voice = 185;
  string cliente_edi = 186;
  string indicador_compen = 187;
  string indicador_ayudan = 188;
  string indicador_rut_dir = 189;
  string agrupamiento = 190;
  string fecha_alta = 191;
  string telvendedor = 192;
  string nombre_telvendedor = 193;
  string jefe_telvendedor = 194;
  string nombre_jefe_telvendedor = 195;
  string intensidad_competitiva = 196;
  string share_kof = 197;
  string tamano_fisico = 198;
  string bloqueo_promociones = 199;
  string desc_bloqueo_promo = 200;
  string desc_share_kof = 201;
  string desc_intensidad_comp = 202;
  string call_prevenda = 203;
  string sector_industrial = 204;
  string prestamo_pallet_chapatex = 205;
}